<resources>
    <string name="test">-</string>
    <string name="add_set">Add Set</string>
    <string name="app_name">MyFitness Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="save_button">Save</string>
    <string name="welcome_mfb">Welcome to MyFitnessBuddy!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="radio_male">M</string>
    <string name="radio_female">F</string>
    <string name="height_type">Inches</string>
    <string name="weight_type">Pounds</string>
    <string name="height_unit">"\""</string>
    <string name="weight_unit">lbs</string>
    <string name="bmi">BMI</string>
    <string name="metabolic_rates">Metabolic Rates</string>
    <string name="calorie_note">(Calories)</string>
    <string name="sedentary">Sedentary</string>
    <string name="lightly_active">Lightly Active</string>
    <string name="moderately_active">Moderately Active</string>
    <string name="very_active">Very Active</string>
    <string name="extremely_active">Extremely Active</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_create_workout">CreateWorkout</string>
    <string name="title_activity_saved_workouts">SavedWorkouts</string>
    <string name="title_activity_my_logs">MyLogs</string>
    <string name="title_activity_predefined_workouts">PredefinedWorkouts</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="profile_button">Profile</string>
    <string name="workouts_button">Workouts</string>
    <string name="logs_button">Logs</string>
    <string name="start_button">Start</string>
    <string name="preview_button">Preview</string>
    <string name="delete_button">Delete</string>
    <string name="back_button">Back</string>
    <string name="cancel_button">Cancel</string>
    <string name="select_button">Select</string>
    <string name="search_button">Search</string>
    <string name="are_you_sure">Are you sure you want to delete this workout?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="view_stats">View Stats</string>
    <string name="description">Description</string>
    <string name="choose_workout">Choose A Workout</string>
    <string name="enter_workout_name">Enter Workout Name</string>
    <string name="workout_name">Workout Name</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="predefined_workout">Predefined Workout</string>
    <string name="customized_workout">Customized Workout</string>
    <string name="repetitions">Repetitions</string>
    <string name="add_new_workout">Add New Workout</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_preview_workout">PreviewWorkout</string>
    <string name="title_activity_start_workout">StartWorkout</string>
    <string name="title_activity_enter_sets">enter_sets</string>
    <string name="title_activity_log_sets">LogSets</string>
    <string name="arnold"><b><b>Step 1:</b></b> Sit down, elbows should be at 90-degrees triceps should be parallel with the ground and palms should be facing the body.\n<b>Step 2:</b> Keeping the 90-degree angle and triceps parallel, contract the upper back and turn the wrists so that the hands are in line with the torso.\n<b>Step 3:</b> From this position lift the dumbbells by fully extend the arms. \n<b>Tips:</b> Keep a neutral back.</string>
    <string name="barbell_back_squat"><b>Step 1:</b> Stand under the bar resting the barbell on the trapezius muscle and stick out the butt slightly. \n<b>Step 2:</b> With an upright chest squat down. \n<b>Tips:</b> Do not allow the knees to go past the toes. Do not allow the knees to cave in. Keep your weight back in your heels.</string>
    <string name="barbell_bench_press"><b>Step 1:</b> Lay down with the back against the bench. Keep the chest up with the shoulder blades squeezed together. \n<b>Step 2:</b> Unrack the weight keeping tight form and lower the barbell to the bottom position keeping elbows in and lats tight. \n<b>Tips:</b> Do not let the elbows flare out. Wider grips heavily target the chest muscles. Narrow grips heavily target the triceps.</string>
    <string name="barbell_biceps_curl"><b>Step 1:</b> Stand up with chest upright and shoulder blades retracted. Keep the chest up with the shoulder blades squeezed together. \n<b>Step 2:</b> Keeping the elbows close to the body, contract the biceps and lift the weight to the top position. \n<b>Tips:</b> Do not round shoulders. Hold the contraction for a 1-second pause at the top.</string>
    <string name="barbell_deadlift"><b>Step 1:</b> Approach the bar with a should-width stance then bend down and grab the bar with a pronated grip. Keep the chest up, hips should be back and the knees should be bent. \n<b>Step 2:</b> Driving through the heels pull the weight to the top position. The spine should stay neutral throughout the movement. Also, the bar should stay close to the body. \n<b>Tips:</b> Do not jerk the weight. Do not let the shoulders round. Squeeze the glutes for a 1-second contraction at the top position.</string>
    <string name="barbell_front_squat"><b>Step 1:</b> Stand under the bar resting the barbell on the shoulders with butt slightly back. Bring the arms up at a 90 degrees so that the elbows are parallel with the ground. Now, cross the arms so that the hands are touching the opposite shoulders and touching the bar. \n<b>Step 2:</b> With an upright chest squat down. \n<b><b>Tips:</b></b> Do not allow the knees to go past the toes. Do not allow the knees to cave in. Keep your weight back in your heels.</string>
</resources>