<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="squad.myfitnessbuddy.Setup">

    <TextView
        android:id="@+id/profileFirstName"
        android:text="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:textIsSelectable="true"
        android:typeface="sans"
        android:textAlignment="center"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/userFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:background="@drawable/rectangle_corners"
        android:layout_below="@id/profileFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:typeface="sans"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/profileLastName"
        android:text="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:typeface="sans"
        android:textAlignment="center"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/userLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_corners"
        android:layout_below="@id/profileLastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:typeface="sans"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/profileAge"
        android:text="@string/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userLastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:typeface="sans"
        android:layout_marginLeft="45dp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/userAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:background="@drawable/rectangle_corners"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:layout_below="@id/profileAge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:typeface="sans"
        android:layout_marginLeft="10dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/profileGender"
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_above="@id/userAge"
        android:layout_marginRight="35dp"
        android:textColor="#000000"
        android:layout_alignEnd="@id/userLastName" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignTop="@id/userAge"
        android:layout_alignEnd="@id/userLastName"
        android:layout_marginRight="20dp">

        <RadioButton
            android:id="@+id/male"
            android:text="@string/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:buttonTint="#2a6aa6" />

        <RadioButton
            android:id="@+id/female"
            android:text="@string/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:buttonTint="#fcae2d96" />

    </RadioGroup>

    <TextView
        android:id="@+id/profileHeight"
        android:text="@string/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userAge"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="30dp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/userHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="5"
        android:background="@drawable/rectangle_corners"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:layout_below="@id/profileHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:typeface="sans"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"
        android:hint="@string/height_type" />


    <TextView
        android:id="@+id/profileWeight"
        android:text="@string/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="#000000"
        android:layout_alignTop="@id/profileHeight"
        android:layout_alignRight="@id/userLastName"
        android:layout_alignEnd="@id/userLastName"
        android:layout_marginRight="35dp" />

    <EditText
        android:id="@+id/userWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="5"
        android:background="@drawable/rectangle_corners"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:typeface="sans"
        android:textAlignment="center"
        android:layout_alignTop="@id/userHeight"
        android:layout_alignEnd="@id/userLastName"
        android:hint="@string/weight_type"
        android:layout_marginRight="15dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:background="#d5eae8"
        android:layout_marginBottom="0dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:minWidth="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="saveSetUp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_mfb"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:nestedScrollingEnabled="true"
        android:textStyle="bold"
        android:padding="5dp"
        android:textColor="#b30808" />


</RelativeLayout>
