<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="squad.myfitnessbuddy.PreviewWorkout"
    tools:showIn="@layout/preview_workout">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:id="@+id/previewWorkoutExerciseLV"
        android:layout_below="@+id/previewWorkoutNameTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:choiceMode="none"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_name"
        android:id="@+id/previewWorkoutNameTV"
        android:textSize="20sp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/previewWorkoutExerciseLV"
        android:layout_centerHorizontal="true"
        android:weightSum="3"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:background="@color/buttonBarColor"
            android:id="@+id/previewWorkoutBackButton"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:onClick="onBackButtonClicked" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_stats"
            android:background="@color/buttonBarColor"
            android:id="@+id/viewStatsButton"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:onClick="onViewStatsClicked" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:background="@color/buttonBarColor"
            android:id="@+id/exerciseDescriptionButton"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:onClick="onDescriptionClicked" />

    </LinearLayout>

</RelativeLayout>
