<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="squad.myfitnessbuddy.LogSets"
    tools:showIn="@layout/log_sets">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        android:textSize="@dimen/primary_text_size"
        android:id="@+id/exerciseNameTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exerciseNameTV"
        android:layout_marginLeft="9dp"
        android:id="@+id/linearLayout2">

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:nextFocusDown="@+id/weightET"
            android:textSize="15dp"
            android:ems="10"
            android:id="@+id/repET"
            android:hint="@string/repetitions" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="15dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:id="@+id/weightET"
            android:hint="@string/weight" />

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:id="@+id/addedSetsLV"
        android:choiceMode="none"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2" />

</RelativeLayout>
