<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="squad.myfitnessbuddy.CreateWorkout"
    tools:showIn="@layout/create_workout">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:id="@+id/exercisesLV"
        android:layout_below="@+id/createWorkoutName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_workout_name"
        android:id="@+id/createWorkoutName"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_below="@+id/exercisesLV"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:id="@+id/saveWorkout"
            android:background="@color/buttonBarColor"
            android:onClick="saveCustomWorkout"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:background="@color/buttonBarColor"
            android:id="@+id/createWorkoutCancel"
            android:onClick="cancelCustomWorkout"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

</RelativeLayout>
